force-app/main/default/objects/Bank_Account__c/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Financial Institution</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Bank Accounts</relationshipLabel>
    <relationshipName>Bank_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>