force-app/main/default/objects/Bank_Account__c/fields/Last_Transaction_Date_time__c.field-meta.xml
<CustomField>
    <fullName>Last_Transaction_Date_time__c</fullName>
    <label>Last Transaction Date</label>
    <type>DateTime</type>
</CustomField>