force-app/main/default/objects/Bank_Account__c/fields/Sum_of_Credits__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Credits__c</fullName>
    <label>Sum of Credits</label>
    <summarizedField>Bank_Account_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Bank_Account_Transaction__c.Transaction_Type__c</field>
        <operation>equals</operation>
        <value>Deposit</value>
    </summaryFilterItems>
    <summaryForeignKey>Bank_Account_Transaction__c.Bank_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>