force-app/main/default/objects/Bank_Account__c/validationRules/Account_number_must_be_8_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_number_must_be_8_digits</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Account_Number__c)&amp;&amp; (LEN( Account_Number__c ) &lt; 8 ||!ISNUMBER( Account_Number__c ))</errorConditionFormula>
    <errorDisplayField>Account_Number__c</errorDisplayField>
    <errorMessage>Please enter a 8 digit numeric value</errorMessage>
</ValidationRule>