force-app/main/default/objects/Bank_Account__c/validationRules/Sort_Code_must_be_6_digit.validationRule-meta.xml
<ValidationRule>
    <fullName>Sort_Code_must_be_6_digit</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(Sort_Code__c) &amp;&amp; ( LEN(Sort_Code__c) &lt; 6 || !ISNUMBER(Sort_Code__c))</errorConditionFormula>
    <errorDisplayField>Sort_Code__c</errorDisplayField>
    <errorMessage>Please enter a 6 digit numeric value</errorMessage>
</ValidationRule>